--- a/PickAColor/Base.lproj/Main.storyboard
+++ b/PickAColor/Base.lproj/Main.storyboard
@@ -15,8 +15,34 @@
                     <view key="view" contentMode="scaleToFill" id="TSO-JR-vrt">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Fyy-GN-Wz5">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="ETz-Ba-6ri">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ETz-Ba-6ri" id="gDo-zN-CAU">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="YKm-JN-4kX" id="JRN-Co-wGU"/>
+                                    <outlet property="delegate" destination="YKm-JN-4kX" id="bau-ax-NKb"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="VhH-kj-s0A"/>
-                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Fyy-GN-Wz5" firstAttribute="top" secondItem="TSO-JR-vrt" secondAttribute="top" id="bam-Jv-1ha"/>
+                            <constraint firstAttribute="bottom" secondItem="Fyy-GN-Wz5" secondAttribute="bottom" id="cxQ-C6-DjQ"/>
+                            <constraint firstItem="Fyy-GN-Wz5" firstAttribute="leading" secondItem="TSO-JR-vrt" secondAttribute="leading" id="rOF-hS-KXv"/>
+                            <constraint firstAttribute="trailing" secondItem="Fyy-GN-Wz5" secondAttribute="trailing" id="zBG-Ff-GcE"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Pick a color" id="4s9-5f-hmL"/>
                     <connections>
@@ -65,9 +91,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
