--- a/PickAColor/Base.lproj/Main.storyboard
+++ b/PickAColor/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Fyy-GN-Wz5">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="ETz-Ba-6ri">
@@ -38,8 +38,8 @@
                         <viewLayoutGuide key="safeArea" id="VhH-kj-s0A"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="VhH-kj-s0A" firstAttribute="bottom" secondItem="Fyy-GN-Wz5" secondAttribute="bottom" id="LPd-JE-Tu6"/>
                             <constraint firstItem="Fyy-GN-Wz5" firstAttribute="top" secondItem="TSO-JR-vrt" secondAttribute="top" id="bam-Jv-1ha"/>
-                            <constraint firstAttribute="bottom" secondItem="Fyy-GN-Wz5" secondAttribute="bottom" id="cxQ-C6-DjQ"/>
                             <constraint firstItem="Fyy-GN-Wz5" firstAttribute="leading" secondItem="TSO-JR-vrt" secondAttribute="leading" id="rOF-hS-KXv"/>
                             <constraint firstAttribute="trailing" secondItem="Fyy-GN-Wz5" secondAttribute="trailing" id="zBG-Ff-GcE"/>
                         </constraints>
